<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/layout_new_base_white_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/backup_icon"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/backup_tv_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black_60a"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:text="@string/backup_hint_title_sub_words"
                />

            <!--  助记词-->
            <LinearLayout
                android:id="@+id/backup_lin_hint_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp30">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="3dp"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_rectange_r3_365cfe"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/words_confirm_title"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="10dp"
                    android:text="@string/backup_hint_content2_words"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="5dp"
                    android:text="@string/backup_hint_content3_words"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20">
                    <View
                        android:layout_width="3dp"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_rectange_r3_365cfe"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/backup_hint_content4_pk"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="10dp"
                    android:text="@string/backup_hint_content5_pk"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="5dp"
                    android:text="@string/backup_hint_content6_words"
                    />
            </LinearLayout>

            <!--  keystore-->
            <LinearLayout
                android:id="@+id/backup_lin_hint_keystore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp30">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="3dp"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_rectange_r3_365cfe"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/backup_hint_title_keystore"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="10dp"
                    android:text="@string/backup_hint_content2_keystore"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="5dp"
                    android:text="@string/backup_hint_content3_keystore"
                    />
            </LinearLayout>

            <!--  私钥-->
            <LinearLayout
                android:id="@+id/backup_lin_hint_private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp30">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="3dp"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_rectange_r3_365cfe"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/backup_hint_content_pk"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="10dp"
                    android:text="@string/backup_hint_content2_pk"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="5dp"
                    android:text="@string/backup_hint_content3_pk"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20">
                    <View
                        android:layout_width="3dp"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_rectange_r3_365cfe"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/backup_hint_content4_pk"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="10dp"
                    android:text="@string/backup_hint_content5_pk"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black_60a"
                    android:layout_marginTop="5dp"
                    android:text="@string/backup_hint_content6_pk"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/backup_tv_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/blue25_stroke_bg"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="35dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/next"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/backup_tv_backup_late"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:textColor="@color/color3256E1"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/backup_hint_backup_late"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>