<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:background="@color/white"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/backup_keystore_hint" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_60a"
                android:textSize="14sp"
                android:text="@string/backup_keystore_hint1" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <View
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/backup_keystore_hint2" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_60a"
                android:textSize="14sp"
                android:text="@string/backup_keystore_hint3"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <View
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/backup_keystore_hint4" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_60a"
                android:textSize="14sp"
                android:text="@string/backup_keystore_hint5" />

            <TextView
                android:id="@+id/backup_ks_tv_keystore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="30dp"
                android:textSize="11sp"
                android:textColor="@color/black_40a"
                android:background="@drawable/white_conner_shadow_bg" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/backup_ks_tv_copy"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/blue25_stroke_bg"
            android:gravity="center"
            tools:text="@string/backup_keystore_copy"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>